# substrate-consensus-barcamp

./: Cargo.toml  README.md
consensus/: Cargo.toml
consensus/src/: lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
