[package]
name = "consensus"
version = "0.1.0"
authors = ["André Silva <andre.beat@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
derive_more = "0.99.0"
futures = "0.3"
log = "0.4.11"
parking_lot = "0.11.0"

sp-api = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-application-crypto = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-consensus = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-core = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-runtime = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }

sc-client-api = { version = "2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-network = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-network-gossip = { version = "0.8.0-rc5", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
